--- a/cities.html
+++ b/cities.html
@@ -34,11 +34,73 @@
 <div class="col-md">Austin</div>
 <div class="col-md">Kansas</div>
 <div class="col-md">Atlanta</div>
-<div class="col-md">Los Angeles</div>
+<div class="col-md">LosAngeles</div>
 </div>
 </div>
 <br>
 <h5>The Cities row breaks first</h5>
 <p>By reducing the browser size ,we will see that the row with city names breaks first because the col-md classes are designed for medium-sized screens and the col-sm2 classes are designed for small screens so that it does not break first.</p>
+<div class="container">
+<div class="image-container">
+<img src="Miami.jpg" alt="City 1" class="responsive-image" width="300" height="300">
+<img src="Yorkville.jpg" alt="City 2" class="responsive-image" width="300" height="300">
+<img src="Austin.jpg" alt="City 3" class="responsive-image" width="300" height="300">
+</div><br>
+<div class="thumbnail-container">
+<img src="Miami.jpg" alt="City 1" class="img-thumbnail" width="150" height="150">
+<img src="Yorkville.jpg" alt="City 2" class="img-thumbnail" width="150" height="150">
+<img src="Austin.jpg" alt="City 3" class="img-thumbnail" width="150" height="150"> 
+</div>
+</div>
+<table class="table custom-table">
+<caption>Table of Letters, Cities, Rivers, and Trees</caption>
+<thead class="thead-dark">
+<tr>
+<th scope="col">Letter</th>
+<th scope="col"class="City-cell">City</th>
+<th scope="col"class="river-cell">River</th>
+<th scope="col"class="tree-cell">Tree</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<th scope="row">M</th>
+<td>Miami</td>
+<td>Meadow River</td>
+<td>Maple Tree</td>
+</tr>
+<tr>
+<th scope="row">Y</th>
+<td>Yorkville</td>
+<td>Yakima River</td>
+<td>Yellowwood Tree</td>
+</tr>
+<tr>
+<th scope="row">A</th>
+<td>Austin</td>
+<td>Alabama River</td>
+<td>Acacia Tree</td>
+</tr>
+<tr>
+<th scope="row">K</th>
+<td>Kansas</td>
+<td>Kalama River</td>
+<td>Karum Tree</td>
+</tr>
+<tr>
+<th scope="row">A</th>
+<td>Atlanta</td>
+<td>Abita River</td>
+<td>Almond Tree</td>
+</tr>
+<tr>
+<th scope="row">L</th>
+<td>LosAngeles</td>
+<td>Logan River</td>
+<td>Lancepod Tree</td>
+</tr>
+</tbody>
+</table>
+
 </body>
 </html>
