--- a/cities.html
+++ b/cities.html
@@ -1,106 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
-    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-    <title>Cities in the world</title>
-</head>
-<body>
-<style>
-    body{background-color: beige;}
-    h1{font-family: 'Courier New';}
-    h1{color:rgb(138, 43, 226);}
-    p{color: rgb(95, 158, 160);}
-</style>
-<h1>Visit cities with RuchithaMyakala</h1>
-<div class="container">
-<div class="row"style="color:brown">
-<div class="col-sm-2">M</div>
-<div class="col-sm-2">Y</div>
-<div class="col-sm-2">A</div>
-<div class="col-sm-2">K</div>
-<div class="col-sm-2">A</div>
-<div class="col-sm-2">L</div>
-</div>
-<div class="row"style="color:green">
-<div class="col-md">Miami</div>
-<div class="col-md">Yorkville</div>
-<div class="col-md">Austin</div>
-<div class="col-md">Kansas</div>
-<div class="col-md">Atlanta</div>
-<div class="col-md">LosAngeles</div>
-</div>
-</div>
-<br>
-<h5>The Cities row breaks first</h5>
-<p>By reducing the browser size ,we will see that the row with city names breaks first because the col-md classes are designed for medium-sized screens and the col-sm2 classes are designed for small screens so that it does not break first.</p>
-<div class="container">
-<div class="image-container">
-<img src="Miami.jpg" alt="City 1" class="responsive-image" width="300" height="300">
-<img src="Yorkville.jpg" alt="City 2" class="responsive-image" width="300" height="300">
-<img src="Austin.jpg" alt="City 3" class="responsive-image" width="300" height="300">
-</div><br>
-<div class="thumbnail-container">
-<img src="Miami.jpg" alt="City 1" class="img-thumbnail" width="150" height="150">
-<img src="Yorkville.jpg" alt="City 2" class="img-thumbnail" width="150" height="150">
-<img src="Austin.jpg" alt="City 3" class="img-thumbnail" width="150" height="150"> 
-</div>
-</div>
-<table class="table custom-table">
-<caption>Table of Letters, Cities, Rivers, and Trees</caption>
-<thead class="thead-dark">
-<tr>
-<th scope="col">Letter</th>
-<th scope="col"class="City-cell">City</th>
-<th scope="col"class="river-cell">River</th>
-<th scope="col"class="tree-cell">Tree</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<th scope="row">M</th>
-<td>Miami</td>
-<td>Meadow River</td>
-<td>Maple Tree</td>
-</tr>
-<tr>
-<th scope="row">Y</th>
-<td>Yorkville</td>
-<td>Yakima River</td>
-<td>Yellowwood Tree</td>
-</tr>
-<tr>
-<th scope="row">A</th>
-<td>Austin</td>
-<td>Alabama River</td>
-<td>Acacia Tree</td>
-</tr>
-<tr>
-<th scope="row">K</th>
-<td>Kansas</td>
-<td>Kalama River</td>
-<td>Karum Tree</td>
-</tr>
-<tr>
-<th scope="row">A</th>
-<td>Atlanta</td>
-<td>Abita River</td>
-<td>Almond Tree</td>
-</tr>
-<tr>
-<th scope="row">L</th>
-<td>LosAngeles</td>
-<td>Logan River</td>
-<td>Lancepod Tree</td>
-</tr>
-</tbody>
-</table>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+    <style>
+        .image-container {
+            display: inline-flex;
+            margin: 10px;
+        }
 
-</body>
+        .responsive-image {
+            max-width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        .thumbnail-image {
+            max-width: 100%;
+            height: auto;
+            border: 2px solid #d26f6f;
+            padding: 5px;
+            background-color: #eedfdf;
+        }
+        .custom-table {
+            border: 2px solid #f6c7ec;
+        }
+        .custom-table th {
+            background-color: #d7e7cc;
+        }
+        .custom-table tbody tr:nth-child(even) {
+            background-color: #d6e1bb;
+        }
+        .custom-table tbody tr:hover {
+            background-color: #eecbd3;
+        }
+        .custom-table .compact {
+            font-size: 0.9rem;
+        }
+        .custom-table .City-cell {
+            color: rgb(196, 98, 98);
+        }
+
+        .custom-table .tree-cell {
+            color: rgb(62, 205, 62);
+        }
+
+        .custom-table .river-cell {
+            color: rgb(29, 29, 195);
+        }
+        <title>Cities in the world</title></head><body><style>body {
+            background-color: beige;
+        }
+
+        h1 {
+            font-family: 'Courier New';
+        }
+
+        h1 {
+            color: rgb(138, 43, 226);
+        }
+
+        p {
+            color: rgb(95, 158, 160);
+        }
+    </style>
+    <h1>Visit cities with RuchithaMyakala</h1>
+    <div class="container">
+        <div class="row" style="color:brown">
+            <div class="col-sm-2">M</div>
+            <div class="col-sm-2">Y</div>
+            <div class="col-sm-2">A</div>
+            <div class="col-sm-2">K</div>
+            <div class="col-sm-2">A</div>
+            <div class="col-sm-2">L</div>
+        </div>
+        <div class="row" style="color:green">
+            <div class="col-md">Miami</div>
+            <div class="col-md">Yorkville</div>
+            <div class="col-md">Austin</div>
+            <div class="col-md">Kansas</div>
+            <div class="col-md">Atlanta</div>
+            <div class="col-md">LosAngeles</div>
+        </div>
+    </div>
+    <br>
+    <h5>The Cities row breaks first</h5>
+    <p>By reducing the browser size ,we will see that the row with city names breaks first because the col-md classes
+        are designed for medium-sized screens and the col-sm2 classes are designed for small screens so that it does not
+        break first.</p>
+    <div class="container">
+        <div class="image-container">
+            <img src="Miami.jpg" alt="City 1" class="responsive-image" width="300" height="300">
+            <img src="Yorkville.jpg" alt="City 2" class="responsive-image" width="300" height="300">
+            <img src="Austin.jpg" alt="City 3" class="responsive-image" width="300" height="300">
+        </div><br>
+        <div class="thumbnail-container">
+            <img src="Miami.jpg" alt="City 1" class="img-thumbnail" width="150" height="150">
+            <img src="Yorkville.jpg" alt="City 2" class="img-thumbnail" width="150" height="150">
+            <img src="Austin.jpg" alt="City 3" class="img-thumbnail" width="150" height="150">
+        </div>
+    </div>
+    <table class="table custom-table">
+        <caption>Table of Letters, Cities, Rivers, and Trees</caption>
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">Letter</th>
+                <th scope="col" class="City-cell">City</th>
+                <th scope="col" class="river-cell">River</th>
+                <th scope="col" class="tree-cell">Tree</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">M</th>
+                <td>Miami</td>
+                <td>Meadow River</td>
+                <td>Maple Tree</td>
+            </tr>
+            <tr>
+                <th scope="row">Y</th>
+                <td>Yorkville</td>
+                <td>Yakima River</td>
+                <td>Yellowwood Tree</td>
+            </tr>
+            <tr>
+                <th scope="row">A</th>
+                <td>Austin</td>
+                <td>Alabama River</td>
+                <td>Acacia Tree</td>
+            </tr>
+            <tr>
+                <th scope="row">K</th>
+                <td>Kansas</td>
+                <td>Kalama River</td>
+                <td>Karum Tree</td>
+            </tr>
+            <tr>
+                <th scope="row">A</th>
+                <td>Atlanta</td>
+                <td>Abita River</td>
+                <td>Almond Tree</td>
+            </tr>
+            <tr>
+                <th scope="row">L</th>
+                <td>LosAngeles</td>
+                <td>Logan River</td>
+                <td>Lancepod Tree</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Button Groups</a>
+</nav>
+  <!-- Six Buttons -->
+  <button type="button" class="btn btn-primary">M</button>
+  <button type="button" class="btn btn-primary">Y</button>
+  <button type="button" class="btn btn-primary">A</button>
+  <button type="button" class="btn btn-warning">K</button>
+  <button type="button" class="btn btn-warning">A</button>
+  <button type="button" class="btn btn-danger">L</button>
+  <!-- Button Groups -->
+  <div class="btn-toolbar" role="toolbar" aria-label="Button Groups">
+  <div class="btn-group" role="group" aria-label="Button Group 1">
+      <!-- First Button Group -->
+      <button type="button" class="btn btn-success">M</button>
+      <button type="button" class="btn btn-success">Y</button>
+      <button type="button" class="btn btn-success">A</button>
+  </div>
+  <div class="btn-group" role="group" aria-label="Button Group 2">
+      <!-- Second Button Group -->
+      <button type="button" class="btn btn-warning">K</button>
+      <button type="button" class="btn btn-warning">A</button>
+  </div>
+  <div class="btn-group" role="group" aria-label="Button Group 3">
+      <!-- Third Button Group -->
+      <button type="button" class="btn btn-danger">L</button>
+  </div>
+</div>
+</div>
+
+    </body>
+
 </html>
