--- a/cities.html
+++ b/cities.html
@@ -180,6 +180,18 @@
             </div>
         </div>
     </div>
+    <br>
+    <div class="container">
+      <div class="dropdown">
+      <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" type="button">Button</button>
+      <div class="dropdown-menu">
+      <a class="dropdown-item" href="basic.html">Basic</a>
+      <a class="dropdown-item" href="advanced.html">Advanced</a>
+      </div>
+      </div>
+      </div>
+      <br>
+      <br>
 
     </body>
 
