--- a/cities.html
+++ b/cities.html
@@ -64,6 +64,30 @@
             color: rgb(29, 29, 195);
         }
     </style>
+    </head>
+    <body>
+        
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <a class="navbar-brand" href="cities.html">A Few Cities</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+    data-bs-target="#plantNavbarInformation" aria-controls="plantNavbarInformation" 
+    aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggle-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="citiesNavbarInformation">
+        <ul class="navbar-nav mr-auto">
+         
+            <li class="nav-item">
+                <a class="nav-link" href="basic.html">basic </a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="advanced.html">advanced </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<br>
+
     <h1>Visit cities with RuchithaMyakala</h1>
     <div class="container">
         <div class="row" style="color:brown">
