--- a/cities.html
+++ b/cities.html
@@ -65,6 +65,7 @@
         }
     </style>
 </head>
+
 <body>
 
     <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -233,6 +234,56 @@
             <button class="btn btn-primary" type="submit">Submit</button>
         </form>
     </div>
+    <br>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-md">
+                <div class="card" style="width: 20rem;">
+                    <img src="Miami.jpg" class="card-img-top" alt="Miami">
+                    <div class="card-body">
+                        <h5 class="card-title">Miami</h5>
+                        <p class="card-text">
+                            Miami,officially the City of Miami, is a coastal metropolis and the seat of Miami-Dade
+                            County in South Florida. With a population of 442,241 as of the 2020 census, it is the
+                            second-most populous city in the state of Florida.
+                        </p>
+                        <a href="https://en.wikipedia.org/wiki/Miami" class="btn btn-success">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="card" style="width: 20rem;">
+                    <img src="Yorkville.jpg" class="card-img-top" alt="Yorkville">
+                    <div class="card-body">
+                        <h5 class="card-title">Yorkville</h5>
+                        <p class="card-text">
+                            Yorkville is a neighborhood on the Upper East Side of Manhattan, New York City, United
+                            States. Its southern boundary is East 79th Street, its northern East 96th Street, its
+                            western Third Avenue, and its eastern the East River.
+                        </p>
+                        <a href="https://en.wikipedia.org/wiki/Yorkville,_Manhattan" class="btn btn-success">Read
+                            More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="card" style="width: 20rem;">
+                    <img src="Austin.jpg" class="card-img-top" alt="Austin">
+                    <div class="card-body">
+                        <h5 class="card-title">Austin</h5>
+                        <p class="card-text">
+                            Austin is the capital city of the U.S. state of Texas, as well as the seat and most populous
+                            city of Travis County, with portions extending into Hays and Williamson counties.
+                            Incorporated on December 27, 1839, it is the 10th-most populous city in the United States
+                        </p>
+                        <a href="https://en.wikipedia.org/wiki/Austin,_Texas" class="btn btn-success">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <br>
 
 </body>
